[package]
edition = "2021"
name = "ssg"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
axum = "0.3"
hotwatch = "0.4"
pulldown-cmark = "0.8"
tokio = {version = "1.14", features = ["full"]}
tower-http = {version = "0.1", features = ["fs"]}
walkdir = "2.3"
